feat: add circular profile avatars to Wethaq UI